# moltres

./: .clang-format  .gitignore  .nvim-dap.lua  CMakeLists.txt  Makefile  README.md
assets/knight/: Idle_frame_pos.txt  README.md
assets/oak_woods/: readme.TXT
src/: animation.c  animation.h  entity.c  entity.h  hashtable.c  hashtable.h  main.c  main.h  player.c  player.h  renderwindow.c  renderwindow.h  utils.c  utils.h  vector.c  vector.h
src/engine/: CMakeLists.txt
src/engine/include/: animation.h  entity.h  main.h  renderwindow.h  vector.h
src/engine/src/: animation.c  entity.c  hashtable.c  main.c  renderwindow.c  utils.c
src/game/: CMakeLists.txt
src/game/include/: main.h
src/game/src/: main.c
